SDK-331 SDK-332 SDK-333 #comment Fixed reply-client handling in http receivers SDK-335 Removed duplicated code from https receiver